[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

[tool.dephell.flake8]
from = {format = "pip", path = "requirements-flake.txt"}
python = ">=3.6"
command = "flake8"

[tool.dephell.pytest]
from = {format = "poetry", path = "pyproject.toml"}
command = "pytest tests/"

[tool.dephell.typing]
from = {format = "poetry", path = "pyproject.toml"}
command = "mypy --ignore-missing-imports --allow-redefinition dephell_venvs"


[tool.poetry]
name = "dephell_markers"
version = "0.2.3"
authors = ["orsinium"]
description = "Work with environment markers (PEP-496)"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.5"
attrs = "*"
dephell_specifier = "*"
packaging = "*"
